--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-ping pong app (edited by Dave)
+PingPongApp: Track all your singles and doubles scores and know for sure who's the best in the office
