Implemented player deletion (de-activation).

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-PingPongApp: Track all your singles and doubles scores and know for sure who's the best in the office
+PingPongNinja: Track all your singles and doubles scores and know for sure who's the best in the office
